--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -33,25 +33,23 @@ builds:
 archives:
 - ids: [beeai,platform-operator]
 kos:           
-  - 
-    repositories: 
-      - ghcr.io/kagenti/kagenti-operator/beeai-operator
+  - repositories: 
+    - ghcr.io/kagenti/kagenti-operator/beeai-operator
     working_dir: beeai
     main: ./cmd
     build: beeai
     tags:
-      - '{{.Version}}'
-      - latest
+    - '{{.Version}}'
+    - latest
     bare: true
     preserve_import_paths: false
     platforms:
-      - linux/amd64
-      - linux/arm64
+    - linux/amd64
+    - linux/arm64
     env:
-      - CGO_ENABLED=0
-  - 
-    repositories:
-      - ghcr.io/kagenti/kagenti-operator/platform-operator 
+    - CGO_ENABLED=0
+  - repositories:
+    - ghcr.io/kagenti/kagenti-operator/platform-operator 
     working_dir: platform-operator 
     main: ./cmd  
     build: platform-operator
