--- a/charts/platform-operator/Chart.yaml
+++ b/charts/platform-operator/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: agentic-platform
+name: kagenti-platform-operator-chart
 description: A Helm chart to distribute the project agentic-platform
 type: application
 version: 0.1.0
