--- a/charts/platform-operator/values.yaml
+++ b/charts/platform-operator/values.yaml
@@ -4,7 +4,7 @@ controllerManager:
   container:
     image:
       repository: ghcr.io/kagenti/kagenti-operator/platform-operator
-      tag: v0.2.0-alpha.3
+      tag: 0.2.0-alpha.3
     args:
       - "--leader-elect"
       - "--metrics-bind-address=:8443"
