fix rbac issues and added tekton configMaps
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/platform-operator/templates/rbac/role.yaml
+++ b/charts/platform-operator/templates/rbac/role.yaml
@@ -37,6 +37,7 @@ rules:
   - kagenti.operator.dev
   resources:
   - components
+  - platforms
   verbs:
   - create
   - delete
@@ -49,12 +50,14 @@ rules:
   - kagenti.operator.dev
   resources:
   - components/finalizers
+  - platforms/finalizers
   verbs:
   - update
 - apiGroups:
   - kagenti.operator.dev
   resources:
   - components/status
+  - platforms/status
   verbs:
   - get
   - patch
