fix rbac issues
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/platform-operator/templates/rbac/role.yaml
+++ b/charts/platform-operator/templates/rbac/role.yaml
@@ -63,4 +63,22 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - tekton.dev
+  resources:
+  - pipelineruns
+  - pipelines
+  - clustertasks
+  - customruns
+  - stepactions
+  - taskruns
+  - tasks
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch 
 {{- end -}}
