--- a/platform-operator/config/rbac/role.yaml
+++ b/platform-operator/config/rbac/role.yaml
@@ -10,6 +10,9 @@ rules:
   - configmaps
   - secrets
   - services
+  - persistentvolumeclaims
+  - pods
+  - namespaces
   verbs:
   - create
   - delete
