change to support webhooks
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/platform-operator/templates/crd/kagenti.operator.dev_components.yaml
+++ b/charts/platform-operator/templates/crd/kagenti.operator.dev_components.yaml
@@ -631,6 +631,10 @@ spec:
                       component
                     type: string
                 type: object
+              suspend:
+                default: false
+                description: Suspend indicates whether the component should be suspended
+                type: boolean
               tool:
                 description: MCP Servers, Utilities, etc
                 properties:
