changed command to run the operator
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/platform-operator/templates/manager/manager.yaml
+++ b/charts/platform-operator/templates/manager/manager.yaml
@@ -32,7 +32,7 @@ spec:
             - {{ . }}
             {{- end }}
           command:
-            - /manager
+            - /ko-app/cmd
           image: {{ .Values.controllerManager.container.image.repository }}:{{ .Values.controllerManager.container.image.tag }}
           imagePullPolicy: IfNotPresent
           {{- if .Values.controllerManager.container.env }}
