--- a/platform-operator/config/certmanager/issuer.yaml
+++ b/platform-operator/config/certmanager/issuer.yaml
@@ -8,6 +8,6 @@ metadata:
     app.kubernetes.io/name: agentic-platform
     app.kubernetes.io/managed-by: kustomize
   name: selfsigned-issuer
-  namespace: system
+  namespace: kagenti-system
 spec:
   selfSigned: {}
