--- a/platform-operator/config/default/kustomization.yaml
+++ b/platform-operator/config/default/kustomization.yaml
@@ -1,12 +1,12 @@
 # Adds namespace to all resources.
-namespace: agentic-platform-system
+namespace: kagenti-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: agentic-platform-
+namePrefix: kagenti-
 
 # Labels to add to all resources and selectors.
 #labels:
