fixed webhook paths
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/platform-operator/config/rbac/role.yaml
+++ b/platform-operator/config/rbac/role.yaml
@@ -56,3 +56,21 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - tekton.dev
+  resources:
+  - clustertasks
+  - customruns
+  - pipelineruns
+  - pipelines
+  - stepactions
+  - taskruns
+  - tasks
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
