--- a/platform-operator/config/manager/manager.yaml
+++ b/platform-operator/config/manager/manager.yaml
@@ -63,6 +63,8 @@ spec:
         args:
           - --leader-elect
           - --health-probe-bind-address=:8081
+          - --webhook-cert-path=/tmp/k8s-webhook-server/serving-certs
+
         image: controller:latest
         name: manager
         ports: []
