update operator chart
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/platform-operator/templates/crd/kagenti.operator.dev_components.yaml
+++ b/charts/platform-operator/templates/crd/kagenti.operator.dev_components.yaml
@@ -626,7 +626,7 @@ spec:
                     type: string
                 type: object
               suspend:
-                default: false
+                default: true
                 description: Suspend indicates whether the component should be suspended
                 type: boolean
               tool:
