--- a/platform-operator/config/tekton/pipeline-template-dev.yaml
+++ b/platform-operator/config/tekton/pipeline-template-dev.yaml
@@ -17,7 +17,7 @@ data:
         "repo-url",
         "revision",
         "subfolder-path",
-        "IMAGE"
+        "image"
       ],
       "steps": [
         {
@@ -39,7 +39,7 @@ data:
           "configMap": "kaniko-docker-build-step",
           "enabled": true,
           "description": "Build container image using Kaniko",
-          "requiredParameters": ["IMAGE"]
+          "requiredParameters": ["image"]
         }
       ],
       "globalParameters": [
