--- a/platform-operator/config/default/kustomization.yaml
+++ b/platform-operator/config/default/kustomization.yaml
@@ -138,7 +138,7 @@ replacements:
     kind: Certificate
     group: cert-manager.io
     version: v1
-    name: agentic-platform-serving-cert  # This name should match the one in certificate.yaml
+    name: serving-cert  # This name should match the one in certificate.yaml
     fieldPath: .metadata.namespace # Namespace of the certificate CR
   targets:
     - select:
@@ -154,7 +154,7 @@ replacements:
     kind: Certificate
     group: cert-manager.io
     version: v1
-    name: agentic-platform-serving-cert 
+    name: serving-cert 
     fieldPath: .metadata.name
   targets:
     - select:
@@ -170,7 +170,7 @@ replacements:
     kind: Certificate
     group: cert-manager.io
     version: v1
-    name: agentic-platform-serving-cert 
+    name: serving-cert 
     fieldPath: .metadata.namespace # Namespace of the certificate CR
   targets:
     - select:
@@ -186,7 +186,7 @@ replacements:
     kind: Certificate
     group: cert-manager.io
     version: v1
-    name: agentic-platform-serving-cert 
+    name: serving-cert 
     fieldPath: .metadata.name
   targets:
     - select:
