--- a/platform-operator/config/manager/kustomization.yaml
+++ b/platform-operator/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: ghcr.io/kagenti/kagenti-operator/platform-operator
-  newTag: 0.2.0-alpha.3
+  newName: controller
+  newTag: latest
