--- a/platform-operator/config/rbac/role.yaml
+++ b/platform-operator/config/rbac/role.yaml
@@ -8,8 +8,37 @@ rules:
   - ""
   resources:
   - configmaps
+  - namespaces
+  - persistentvolumeclaims
+  - pods
   - secrets
+  - serviceaccounts
   - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - admissionregistration.k8s.io
+  resources:
+  - mutatingwebhookconfigurations
+  - validatingwebhookconfigurations
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
   verbs:
   - create
   - delete
@@ -21,7 +50,24 @@ rules:
 - apiGroups:
   - apps
   resources:
+  - daemonsets
   - deployments
+  - replicasets
+  - statefulsets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - extensions
+  resources:
+  - daemonsets
+  - deployments
+  - replicasets
   verbs:
   - create
   - delete
@@ -34,6 +80,7 @@ rules:
   - kagenti.operator.dev
   resources:
   - components
+  - platforms
   verbs:
   - create
   - delete
@@ -46,16 +93,46 @@ rules:
   - kagenti.operator.dev
   resources:
   - components/finalizers
+  - platforms/finalizers
   verbs:
   - update
 - apiGroups:
   - kagenti.operator.dev
   resources:
   - components/status
+  - platforms/status
   verbs:
   - get
   - patch
   - update
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  - networkpolicies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - clusterrolebindings
+  - clusterroles
+  - rolebindings
+  - roles
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - tekton.dev
   resources:
