support local chart deployments
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/platform-operator/templates/crd/kagenti.operator.dev_components.yaml
+++ b/charts/platform-operator/templates/crd/kagenti.operator.dev_components.yaml
@@ -14,7 +14,17 @@ spec:
     singular: component
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    - jsonPath: .spec.suspend
+      name: Suspend
+      type: boolean
+    - jsonPath: .status.conditions[?(@.type=='Ready')].status
+      name: READY
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Component is the Schema for the components API.
