--- a/charts/platform-operator/values.yaml
+++ b/charts/platform-operator/values.yaml
@@ -10,7 +10,7 @@ controllerManager:
       - "--metrics-bind-address=:8443"
       - "--health-probe-bind-address=:8081"
       - "--webhook-cert-path=/tmp/k8s-webhook-server/serving-certs"
-
+    cmd: /ko-app/cmd
     resources:
       limits:
         cpu: 500m
