--- a/platform-operator/config/samples/kagenti.operator.dev_v1alpha1_component.yaml
+++ b/platform-operator/config/samples/kagenti.operator.dev_v1alpha1_component.yaml
@@ -1,4 +1,4 @@
-apiVersion: kagenti.operator.dev.kagenti.operator.dev/v1alpha1
+apiVersion: kagenti.operator.dev/v1alpha1
 kind: Component
 metadata:
   labels:
