--- a/charts/platform-operator/templates/rbac/platform_editor_role.yaml
+++ b/charts/platform-operator/templates/rbac/platform_editor_role.yaml
@@ -2,7 +2,7 @@
 # This rule is not used by the project agentic-platform itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants permissions to create, update, and delete resources within the kagenti.operator.dev.kagenti.operator.dev.
+# Grants permissions to create, update, and delete resources within the kagenti.operator.dev
 # This role is intended for users who need to manage these resources
 # but should not control RBAC or manage permissions for others.
 
@@ -14,7 +14,7 @@ metadata:
   name: platform-editor-role
 rules:
 - apiGroups:
-  - kagenti.operator.dev.kagenti.operator.dev
+  - kagenti.operator.dev
   resources:
   - platforms
   verbs:
@@ -26,7 +26,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - kagenti.operator.dev.kagenti.operator.dev
+  - kagenti.operator.dev
   resources:
   - platforms/status
   verbs:
