--- a/charts/platform-operator/templates/rbac/role.yaml
+++ b/charts/platform-operator/templates/rbac/role.yaml
@@ -1,21 +1,44 @@
-{{- if .Values.rbac.enable }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    {{- include "chart.labels" . | nindent 4 }}
   name: agentic-platform-manager-role
 rules:
 - apiGroups:
   - ""
   resources:
   - configmaps
-  - secrets
-  - services
+  - namespaces
   - persistentvolumeclaims
   - pods
-  - namespaces
+  - secrets
+  - serviceaccounts
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - admissionregistration.k8s.io
+  resources:
+  - mutatingwebhookconfigurations
+  - validatingwebhookconfigurations
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
   verbs:
   - create
   - delete
@@ -27,7 +50,24 @@ rules:
 - apiGroups:
   - apps
   resources:
+  - daemonsets
   - deployments
+  - replicasets
+  - statefulsets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - extensions
+  resources:
+  - daemonsets
+  - deployments
+  - replicasets
   verbs:
   - create
   - delete
@@ -66,12 +106,40 @@ rules:
   - patch
   - update
 - apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  - networkpolicies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - clusterrolebindings
+  - clusterroles
+  - rolebindings
+  - roles
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - tekton.dev
   resources:
-  - pipelineruns
-  - pipelines
   - clustertasks
   - customruns
+  - pipelineruns
+  - pipelines
   - stepactions
   - taskruns
   - tasks
@@ -82,5 +150,4 @@ rules:
   - list
   - patch
   - update
-  - watch 
-{{- end -}}
+  - watch
