--- a/platform-operator/config/rbac/platform_admin_role.yaml
+++ b/platform-operator/config/rbac/platform_admin_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project agentic-platform itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants full permissions ('*') over kagenti.operator.dev.kagenti.operator.dev.
+# Grants full permissions ('*') over kagenti.operator.dev
 # This role is intended for users authorized to modify roles and bindings within the cluster,
 # enabling them to delegate specific permissions to other users or groups as needed.
 
@@ -14,13 +14,13 @@ metadata:
   name: platform-admin-role
 rules:
 - apiGroups:
-  - kagenti.operator.dev.kagenti.operator.dev
+  - kagenti.operator.dev
   resources:
   - platforms
   verbs:
   - '*'
 - apiGroups:
-  - kagenti.operator.dev.kagenti.operator.dev
+  - kagenti.operator.dev
   resources:
   - platforms/status
   verbs:
