Prevent Component from trying to own a CRD
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/platform-operator/config/samples/components-example.yaml
+++ b/platform-operator/config/samples/components-example.yaml
@@ -37,8 +37,11 @@ spec:
       manifest:
         github:
            repository: https://github.com/kagenti/kagenti
-           path: kagenti/installer/src/resources/phoenix.yaml
+           path: kagenti/installer/app/resources/phoenix.yaml
            revision: main
+           authSecretRef:
+             name: github-token-secret
+
     env:
 ---
 
