modified clone-step cm to use image from ghcr
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/platform-operator/templates/tekton/github-clone-step.yaml
+++ b/charts/platform-operator/templates/tekton/github-clone-step.yaml
@@ -21,7 +21,7 @@ data:
         default: "main"
     steps:
       - name: git-clone
-        image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:latest
+        image: ghcr.io/tektoncd/github.com/tektoncd/pipeline/cmd/git-init:latest
         command:
           - /ko-app/git-init
         args:
