--- a/charts/platform-operator/templates/rbac/role.yaml
+++ b/charts/platform-operator/templates/rbac/role.yaml
@@ -47,6 +47,14 @@ rules:
   - patch
   - update
   - watch
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: 
+  - clusterroles
+  - clusterrolebindings
+  - roles
+  - rolebindings
+  - serviceaccounts
+  verbs: ["*"]  
 - apiGroups:
   - apps
   resources:
