--- a/charts/platform-operator/templates/tekton/kaniko-build-step-external.yaml
+++ b/charts/platform-operator/templates/tekton/kaniko-build-step-external.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: kaniko-docker-build-step
+  name: kaniko-docker-build-step-external
   namespace: kagenti-system  
   labels:
     kagenti.operator.dev/tekton: step 
 data:
-
   task-spec.yaml: |
     params:
       - name: DOCKERFILE
@@ -26,7 +25,7 @@ data:
       - name: registry-secret
         type: string
         description: Name of the secret containing registry credentials
-        default: "ghcr-token"
+        default: "quay-registry-secret"
     steps:
       - name: docker-build
         image: gcr.io/kaniko-project/executor:v1.9.1
