--- a/platform-operator/config/crd/bases/kagenti.operator.dev_components.yaml
+++ b/platform-operator/config/crd/bases/kagenti.operator.dev_components.yaml
@@ -114,6 +114,8 @@ spec:
                           This will be used to fetch the pipeline template from ConfigMap
                         enum:
                         - dev
+                        - dev-local
+                        - dev-external
                         - preprod
                         - prod
                         - custom
@@ -801,6 +803,8 @@ spec:
                           This will be used to fetch the pipeline template from ConfigMap
                         enum:
                         - dev
+                        - dev-local
+                        - dev-external
                         - preprod
                         - prod
                         - custom
