synch crds with charts
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/platform-operator/templates/crd/kagenti.operator.dev_components.yaml
+++ b/charts/platform-operator/templates/crd/kagenti.operator.dev_components.yaml
@@ -114,6 +114,8 @@ spec:
                           This will be used to fetch the pipeline template from ConfigMap
                         enum:
                         - dev
+                        - dev-local
+                        - dev-external
                         - preprod
                         - prod
                         - custom
@@ -10848,6 +10850,8 @@ spec:
                           This will be used to fetch the pipeline template from ConfigMap
                         enum:
                         - dev
+                        - dev-local
+                        - dev-external
                         - preprod
                         - prod
                         - custom
