--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -56,10 +56,9 @@ jobs:
       run: |
         chartVersion=$(echo ${{ github.ref_name }} | cut -c 2-)
         chartPackageName="kagenti-platform-operator-chart-${chartVersion}.tgz"
-        cd ${{ env.CHARTS_PATH }}/platform-operator 
+        cd ${{ env.CHARTS_PATH }}/platform-operator
+        sed -i "s/__PLACEHOLDER__/${chartVersion}/g" values.yaml
         helm package . --destination . --version ${chartVersion} --app-version ${chartVersion}
-        ls -l # List files to check the generated filename
-        echo "Chart version: ${chartVersion}" 
         helm push "./${chartPackageName}" oci://${{ env.REGISTRY }}/${{ env.REPO }}        
     
      
