new controller to reconcile KagentiAgent CR
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/kagenti-operator/config/samples/agent_v1alpha1_kagentiagent.yaml
+++ b/kagenti-operator/config/samples/agent_v1alpha1_kagentiagent.yaml
@@ -6,4 +6,17 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: kagentiagent-sample
 spec:
-  # TODO(user): Add fields here
+  description: "Sample Kagenti Agent"
+  podTemplateSpec:
+    spec:
+      containers:
+        - name: kagenti-agent
+ #         image: "ghcr.io/kagenti/agent-examples/weather_service:v0.0.1-alpha.2"
+          image: "ghcr.io/cwiklik/weather-tool:latest"
+          imagePullPolicy: Always
+#          command: ["/bin/sh", "-c", "ls -la /app && sleep 3600"]
+          ports:
+            - containerPort: 8080
+              name: http
+              protocol: TCP
+  replicas: 1
