--- a/kagenti-operator/config/rbac/role.yaml
+++ b/kagenti-operator/config/rbac/role.yaml
@@ -5,8 +5,28 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - agent.kagenti.dev
   resources:
+  - kagentiagentbuilds
   - kagentiagents
   verbs:
   - create
@@ -19,14 +39,28 @@ rules:
 - apiGroups:
   - agent.kagenti.dev
   resources:
+  - kagentiagentbuilds/finalizers
   - kagentiagents/finalizers
   verbs:
   - update
 - apiGroups:
   - agent.kagenti.dev
   resources:
+  - kagentiagentbuilds/status
   - kagentiagents/status
   verbs:
   - get
   - patch
   - update
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
