--- a/kagenti-operator/config/samples/agent_v1alpha1_kagentiagent.yaml
+++ b/kagenti-operator/config/samples/agent_v1alpha1_kagentiagent.yaml
@@ -1,10 +1,10 @@
 apiVersion: agent.kagenti.dev/v1alpha1
-kind: KagentiAgent
+kind: Agent
 metadata:
   labels:
     app.kubernetes.io/name: kagenti-operator
     app.kubernetes.io/managed-by: kustomize
-  name: kagentiagent-sample
+  name: agent-sample
 spec:
   description: "Sample Kagenti Agent"
   podTemplateSpec:
