--- a/kagenti-operator/config/samples/agent_v1alpha1_kagentiagentbuild.yaml
+++ b/kagenti-operator/config/samples/agent_v1alpha1_kagentiagentbuild.yaml
@@ -1,9 +1,9 @@
 apiVersion: agent.kagenti.dev/v1alpha1
-kind: KagentiAgentBuild
+kind: AgentBuild
 metadata:
   labels:
     app.kubernetes.io/name: kagenti-operator
     app.kubernetes.io/managed-by: kustomize
-  name: kagentiagentbuild-sample
+  name: Agentbuild-sample
 spec:
   # TODO(user): Add fields here
