--- a/kagenti-operator/config/crd/bases/agent.kagenti.dev_agents.yaml
+++ b/kagenti-operator/config/crd/bases/agent.kagenti.dev_agents.yaml
@@ -55,17 +55,39 @@ spec:
           spec:
             description: AgentSpec defines the desired state of Agent.
             properties:
+              annotations:
+                additionalProperties:
+                  type: string
+                description: Annotations to be added to this agent
+                type: object
               description:
                 description: Description is a human-readable description of the agent
                 type: string
+              imageSource:
+                description: ImageSource specifies the container image or build reference
+                  for the agent
+                properties:
+                  buildRef:
+                    description: BuildRef specifies the AgentBuild used for building
+                      the agent image from source code.
+                    properties:
+                      name:
+                        description: Name of the AgentBuild resource to use for building
+                          the agent image
+                        type: string
+                    type: object
+                  image:
+                    description: Image is the container image to use for the agent.
+                      This is used when BuildRef is not specified.
+                    type: string
+                type: object
+              labels:
+                additionalProperties:
+                  type: string
+                description: Labels to be added to this agent
+                type: object
               podTemplateSpec:
-                description: |-
-                  PodTemplateSpec provides complete control over Pod specification.
-                  When specified, this field takes precedence over all other configuration
-                  fields except Replicas. All other fields (ImageSpec, Resources, ContainerPorts,
-                  ServicePorts, ServiceType, Volumes, VolumeMounts) should be omitted
-                  as they will be ignored in favor of the PodTemplateSpec configuration.
-                  Mutually exclusive with ImageSpec deployment mode.
+                description: PodTemplateSpec provides complete control over Pod specification.
                 properties:
                   metadata:
                     description: |-
@@ -8091,7 +8113,85 @@ spec:
                 description: Replicas is the desired number of agent replicas.
                 format: int32
                 type: integer
+              servicePorts:
+                default:
+                - name: http
+                  port: 8080
+                  protocol: TCP
+                description: ServicePorts specifies the service ports to expose for
+                  the agent
+                items:
+                  description: ServicePort contains information on service's port.
+                  properties:
+                    appProtocol:
+                      description: |-
+                        The application protocol for this port.
+                        This is used as a hint for implementations to offer richer behavior for protocols that they understand.
+                        This field follows standard Kubernetes label syntax.
+                        Valid values are either:
+
+                        * Un-prefixed protocol names - reserved for IANA standard service names (as per
+                        RFC-6335 and https://www.iana.org/assignments/service-names).
+
+                        * Kubernetes-defined prefixed names:
+                          * 'kubernetes.io/h2c' - HTTP/2 prior knowledge over cleartext as described in https://www.rfc-editor.org/rfc/rfc9113.html#name-starting-http-2-with-prior-
+                          * 'kubernetes.io/ws'  - WebSocket over cleartext as described in https://www.rfc-editor.org/rfc/rfc6455
+                          * 'kubernetes.io/wss' - WebSocket over TLS as described in https://www.rfc-editor.org/rfc/rfc6455
+
+                        * Other protocols should use implementation-defined prefixed names such as
+                        mycompany.com/my-custom-protocol.
+                      type: string
+                    name:
+                      description: |-
+                        The name of this port within the service. This must be a DNS_LABEL.
+                        All ports within a ServiceSpec must have unique names. When considering
+                        the endpoints for a Service, this must match the 'name' field in the
+                        EndpointPort.
+                        Optional if only one ServicePort is defined on this service.
+                      type: string
+                    nodePort:
+                      description: |-
+                        The port on each node on which this service is exposed when type is
+                        NodePort or LoadBalancer.  Usually assigned by the system. If a value is
+                        specified, in-range, and not in use it will be used, otherwise the
+                        operation will fail.  If not specified, a port will be allocated if this
+                        Service requires one.  If this field is specified when creating a
+                        Service which does not need it, creation will fail. This field will be
+                        wiped when updating a Service to no longer need it (e.g. changing type
+                        from NodePort to ClusterIP).
+                        More info: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
+                      format: int32
+                      type: integer
+                    port:
+                      description: The port that will be exposed by this service.
+                      format: int32
+                      type: integer
+                    protocol:
+                      default: TCP
+                      description: |-
+                        The IP protocol for this port. Supports "TCP", "UDP", and "SCTP".
+                        Default is TCP.
+                      type: string
+                    targetPort:
+                      anyOf:
+                      - type: integer
+                      - type: string
+                      description: |-
+                        Number or name of the port to access on the pods targeted by the service.
+                        Number must be in the range 1 to 65535. Name must be an IANA_SVC_NAME.
+                        If this is a string, it will be looked up as a named port in the
+                        target Pod's container ports. If this is not specified, the value
+                        of the 'port' field is used (an identity map).
+                        This field is ignored for services with clusterIP=None, and should be
+                        omitted or set equal to the 'port' field.
+                        More info: https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
+                      x-kubernetes-int-or-string: true
+                  required:
+                  - port
+                  type: object
+                type: array
             required:
+            - imageSource
             - podTemplateSpec
             type: object
           status:
@@ -8165,8 +8265,8 @@ spec:
                     description: Deployment message
                     type: string
                   phase:
-                    description: 'Current deployment phase: PhasePending, PhaseDeploying,
-                      PhaseReady, PhaseFailed'
+                    description: 'Current deployment phase: PhaseDeploying, PhaseReady,
+                      PhaseFailed'
                     type: string
                 type: object
             type: object
