--- a/kagenti-operator/config/default/kustomization.yaml
+++ b/kagenti-operator/config/default/kustomization.yaml
@@ -1,5 +1,5 @@
 # Adds namespace to all resources.
-namespace: kagenti-operator-system
+namespace: kagenti-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
