--- a/charts/platform-operator/templates/tekton/kaniko-build-step-local.yaml
+++ b/charts/platform-operator/templates/tekton/kaniko-build-step-local.yaml
@@ -24,7 +24,7 @@ data:
         description: Path to the subfolder to use as build context
     steps:
       - name: docker-build
-        image: gcr.io/kaniko-project/executor:v1.9.1
+        image: quay.io/strimzi/kaniko-executor:0.48.0
         args:
           - --dockerfile=$(params.DOCKERFILE)
           - --context=$(workspaces.source.path)/$(params.subfolder-path)
