--- a/charts/platform-operator/templates/tekton/kaniko-build-step.yaml
+++ b/charts/platform-operator/templates/tekton/kaniko-build-step.yaml
@@ -29,7 +29,7 @@ data:
         default: "ghcr-token"
     steps:
       - name: docker-build
-        image: gcr.io/kaniko-project/executor:v1.9.1
+        image: quay.io/strimzi/kaniko-executor:0.48.0
         args:
           - --dockerfile=$(params.DOCKERFILE)
           - --context=$(workspaces.source.path)/$(params.subfolder-path)
