Update generated CRD to match latest codebase changes.
Signed-off-by: usize <mofoster@redhat.com>

--- a/platform-operator/config/crd/bases/kagenti.operator.dev_components.yaml
+++ b/platform-operator/config/crd/bases/kagenti.operator.dev_components.yaml
@@ -552,8 +552,13 @@ spec:
                             type: string
                         type: object
                       podTemplateSpec:
-                        description: PodTemplateSpec describes the data a pod should
-                          have when created from a template
+                        description: |-
+                          PodTemplateSpec provides complete control over Pod specification.
+                          When specified, this field takes precedence over all other configuration
+                          fields except Replicas. All other fields (ImageSpec, Resources, ContainerPorts,
+                          ServicePorts, ServiceType, Volumes, VolumeMounts) should be omitted
+                          as they will be ignored in favor of the PodTemplateSpec configuration.
+                          Mutually exclusive with ImageSpec and Manifest deployment modes.
                         properties:
                           metadata:
                             description: |-
@@ -10738,6 +10743,11 @@ spec:
                           type: object
                         type: array
                     type: object
+                    x-kubernetes-validations:
+                    - message: exactly one of imageSpec, manifest, or podTemplateSpec
+                        must be specified
+                      rule: '[has(self.imageSpec), has(self.manifest), has(self.podTemplateSpec)].filter(x,
+                        x).size() == 1'
                   name:
                     description: Name of the k8s resource
                     type: string
