--- a/kagenti-operator/config/rbac/kustomization.yaml
+++ b/kagenti-operator/config/rbac/kustomization.yaml
@@ -22,10 +22,10 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the {{ .ProjectName }} itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
-- kagentiagentbuild_admin_role.yaml
-- kagentiagentbuild_editor_role.yaml
-- kagentiagentbuild_viewer_role.yaml
-- kagentiagent_admin_role.yaml
-- kagentiagent_editor_role.yaml
-- kagentiagent_viewer_role.yaml
+- agentbuild_admin_role.yaml
+- agentbuild_editor_role.yaml
+- agentbuild_viewer_role.yaml
+- agent_admin_role.yaml
+- agent_editor_role.yaml
+- agent_viewer_role.yaml
 
