--- a/kagenti-operator/config/samples/kustomization.yaml
+++ b/kagenti-operator/config/samples/kustomization.yaml
@@ -1,5 +1,5 @@
 ## Append samples of your project ##
 resources:
-- agent_v1alpha1_kagentiagent.yaml
-- agent_v1alpha1_kagentiagentbuild.yaml
+- agent_v1alpha1_agent.yaml
+- agent_v1alpha1_agentbuild.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
