--- a/kagenti-operator/config/rbac/agentbuild_editor_role.yaml
+++ b/kagenti-operator/config/rbac/agentbuild_editor_role.yaml
@@ -1,9 +1,9 @@
 # This rule is not used by the project kagenti-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants read-only access to agent.kagenti.dev resources.
-# This role is intended for users who need visibility into these resources
-# without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
+# Grants permissions to create, update, and delete resources within the agent.kagenti.dev.
+# This role is intended for users who need to manage these resources
+# but should not control RBAC or manage permissions for others.
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -11,19 +11,23 @@ metadata:
   labels:
     app.kubernetes.io/name: kagenti-operator
     app.kubernetes.io/managed-by: kustomize
-  name: kagentiagentbuild-viewer-role
+  name: agentbuild-editor-role
 rules:
 - apiGroups:
   - agent.kagenti.dev
   resources:
-  - kagentiagentbuilds
+  - agentbuilds
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - agent.kagenti.dev
   resources:
-  - kagentiagentbuilds/status
+  - agentbuilds/status
   verbs:
   - get
